#25570 : Redis / Session-less testing and improvements